tests/sumo/extended/vaporizer/errors/begin_missing/errors.sumo
Error: Attribute 'begin' is missing in definition of a vaporizer.
Quitting (on error).
